# pipit

./: .gitignore  config.json  connections.pickle  equivalent.pickle  game.py  islands.pickle  main.py  new_words.pickle  paths.pickle  pyproject.toml  requirements.txt  temp_save_meanings.py  word_creator.py  words.pickle
static/: styles.css
templates/: about.html  index copy.html  index.html
